--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>life-link-services</title>
-    <meta name="description" content="made by rakib" />
+    <title>local-conenct</title>
+    <meta name="description" content="Syeda Mahmuda" />
     <meta name="author" content="Rakib" />
 
-    <meta property="og:title" content="life-link-services" />
+    <meta property="og:title" content="local-connect" />
 
     <meta property="og:type" content="website" />
 
